Adds hard filters on specialized controllers

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -39,6 +39,7 @@
 # - "backend/analytic_distributions#unroll"
 # - "backend/analytic_distributions#update"
 # - "backend/animal_foods#index"
+# - "backend/animal_foods#list"
 # - "backend/animal_groups#create"
 # - "backend/animal_groups#destroy"
 # - "backend/animal_groups#edit"
@@ -72,6 +73,7 @@
 # - "backend/animal_medicines#unroll"
 # - "backend/animal_medicines#update"
 # - "backend/animal_products#index"
+# - "backend/animal_products#list"
 # - "backend/animals#create"
 # - "backend/animals#destroy"
 # - "backend/animals#edit"
@@ -523,6 +525,7 @@
 # - "backend/people#unroll"
 # - "backend/people#update"
 # - "backend/plant_fertilizers#index"
+# - "backend/plant_fertilizers#list"
 # - "backend/plant_medicines#create"
 # - "backend/plant_medicines#destroy"
 # - "backend/plant_medicines#edit"
@@ -545,7 +548,9 @@
 # - "backend/plant_medicines#unroll"
 # - "backend/plant_medicines#update"
 # - "backend/plant_products#index"
+# - "backend/plant_products#list"
 # - "backend/plant_seedlings#index"
+# - "backend/plant_seedlings#list"
 # - "backend/plants#create"
 # - "backend/plants#destroy"
 # - "backend/plants#edit"
