--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /db/first_runs/haurigot
 /db/first_runs/earlgouget
 /db/first_runs/rouges-safran
+/db/first_runs/lafermeduroi
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
