--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,7 @@
 /db/*.sqlite3-journal
 
 # Ignore the default first run files
-/db/first_runs/default
-/db/first_runs/gaecmilkjug
-/db/first_runs/gaecjoulin
-/db/first_runs/haurigot
-/db/first_runs/earlgouget
-/db/first_runs/rouges-safran
-/db/first_runs/lafermeduroi
+/db/first_runs/*
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
