--- a/config/rights.yml
+++ b/config/rights.yml
@@ -607,11 +607,13 @@
 # - "backend/product_nature_categories#create"
 # - "backend/product_nature_categories#destroy"
 # - "backend/product_nature_categories#edit"
+# - "backend/product_nature_categories#incorporate"
 # - "backend/product_nature_categories#index"
 # - "backend/product_nature_categories#list"
 # - "backend/product_nature_categories#list_product_natures"
 # - "backend/product_nature_categories#list_products"
 # - "backend/product_nature_categories#new"
+# - "backend/product_nature_categories#pick"
 # - "backend/product_nature_categories#show"
 # - "backend/product_nature_categories#unroll"
 # - "backend/product_nature_categories#update"
@@ -623,16 +625,20 @@
 # - "backend/product_nature_variants#create"
 # - "backend/product_nature_variants#destroy"
 # - "backend/product_nature_variants#edit"
+# - "backend/product_nature_variants#incorporate"
 # - "backend/product_nature_variants#index"
 # - "backend/product_nature_variants#list"
 # - "backend/product_nature_variants#list_prices"
 # - "backend/product_nature_variants#list_products"
 # - "backend/product_nature_variants#new"
+# - "backend/product_nature_variants#pick"
 # - "backend/product_nature_variants#show"
 # - "backend/product_nature_variants#unroll"
 # - "backend/product_nature_variants#update"
+# - "backend/product_natures#incorporate"
 # - "backend/product_natures#list_product_nature_variants"
 # - "backend/product_natures#list_products"
+# - "backend/product_natures#pick"
 # - "backend/product_natures#show"
 # - "backend/product_natures#unroll"
 # - "backend/production_support_markers#create"
