update transformation product and linked data

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -715,8 +715,12 @@
 # - "backend/subscriptions#unroll"
 # - "backend/taxes#unroll"
 # - "backend/teams#unroll"
+# - "backend/transformed_products#index"
+# - "backend/transformed_products#list"
 # - "backend/transports#unroll"
 # - "backend/users#unroll"
+# - "backend/wine_tanks#index"
+# - "backend/wine_tanks#list"
 # - "backend/workers#create"
 # - "backend/workers#destroy"
 # - "backend/workers#edit"
