re-add tracking management

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -721,6 +721,15 @@
 # - "backend/subscriptions#unroll"
 # - "backend/taxes#unroll"
 # - "backend/teams#unroll"
+# - "backend/trackings#create"
+# - "backend/trackings#destroy"
+# - "backend/trackings#edit"
+# - "backend/trackings#index"
+# - "backend/trackings#list"
+# - "backend/trackings#new"
+# - "backend/trackings#show"
+# - "backend/trackings#unroll"
+# - "backend/trackings#update"
 # - "backend/transformed_products#index"
 # - "backend/transformed_products#list"
 # - "backend/transports#unroll"
