update tracking for a mininum working and clean code.

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -726,6 +726,7 @@
 # - "backend/trackings#edit"
 # - "backend/trackings#index"
 # - "backend/trackings#list"
+# - "backend/trackings#list_products"
 # - "backend/trackings#new"
 # - "backend/trackings#show"
 # - "backend/trackings#unroll"
