Begins to introduce before-run step to sets live reading values

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -301,6 +301,7 @@
 # - "backend/interfacers#unroll"
 # - "backend/interfacers#unroll_options"
 # - "backend/interventions#compute"
+# - "backend/interventions#set"
 # - "backend/inventories#unroll"
 # - "backend/issues#abort"
 # - "backend/issues#close"
