Adds column number for interventions

--- a/db/tables.yml
+++ b/db/tables.yml
@@ -741,6 +741,7 @@ interventions:
   issue_id: {type: integer, references: issue}
   lock_version: {type: integer, required: true, default: 0}
   natures: {type: string, required: true}
+  number: {type: string}
   prescription_id: {type: integer, references: prescription}
   production_id: {type: integer, references: production, required: true}
   production_support_id: {type: integer, references: production_support}
