--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # Ignore the default first run files
 /db/first_runs/*
+!/db/first_runs/demo
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
