--- a/test/fixtures/interventions.yml
+++ b/test/fixtures/interventions.yml
@@ -63,6 +63,7 @@
 interventions_001:
   creator: users_001
   natures: grinding, soil_enrichment
+  number: "1"
   production: productions_001
   provisional: false
   reference_name: 'base-plant_grinding-0'
@@ -74,6 +75,7 @@ interventions_001:
 interventions_002:
   creator: users_001
   natures: grinding, soil_enrichment
+  number: "2"
   production: productions_001
   provisional: false
   reference_name: 'base-plant_grinding-0'
