--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -796,6 +796,7 @@ settlements_003:
   updater: users_001
   variant: product_nature_variants_001
   variety: settlement
+
 workers_001:
   category: product_nature_categories_001
   creator: users_001
@@ -803,11 +804,12 @@ workers_001:
   nature: product_natures_001
   number: '21001'
   parent: products_001
-  person: person_001
+  person: people_001
   type: Worker
   updater: users_001
   variant: product_nature_variants_001
   variety: worker
+
 workers_002:
   category: product_nature_categories_001
   creator: users_001
@@ -815,11 +817,12 @@ workers_002:
   nature: product_natures_001
   number: '21002'
   parent: products_001
-  person: person_002
+  person: people_002
   type: Worker
   updater: users_001
   variant: product_nature_variants_001
   variety: worker
+
 workers_003:
   category: product_nature_categories_001
   creator: users_001
@@ -827,7 +830,7 @@ workers_003:
   nature: product_natures_001
   number: '21003'
   parent: products_001
-  person: person_003
+  person: people_003
   type: Worker
   updater: users_001
   variant: product_nature_variants_001
