add entry for wine transformers

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -257,6 +257,27 @@
 # - "backend/events#unroll"
 # - "backend/financial_assets#unroll"
 # - "backend/financial_years#unroll"
+# - "backend/fungi#create"
+# - "backend/fungi#destroy"
+# - "backend/fungi#edit"
+# - "backend/fungi#index"
+# - "backend/fungi#list"
+# - "backend/fungi#list_carried_linkages"
+# - "backend/fungi#list_carrier_linkages"
+# - "backend/fungi#list_contained_products"
+# - "backend/fungi#list_groups"
+# - "backend/fungi#list_intervention_casts"
+# - "backend/fungi#list_issues"
+# - "backend/fungi#list_markers"
+# - "backend/fungi#list_members"
+# - "backend/fungi#list_places"
+# - "backend/fungi#list_reading_tasks"
+# - "backend/fungi#list_readings"
+# - "backend/fungi#new"
+# - "backend/fungi#picture"
+# - "backend/fungi#show"
+# - "backend/fungi#unroll"
+# - "backend/fungi#update"
 # - "backend/gaps#index"
 # - "backend/gaps#list"
 # - "backend/gaps#list_items"
@@ -737,6 +758,8 @@
 # - "backend/users#unroll"
 # - "backend/wine_tanks#index"
 # - "backend/wine_tanks#list"
+# - "backend/wine_transformers#index"
+# - "backend/wine_transformers#list"
 # - "backend/workers#create"
 # - "backend/workers#destroy"
 # - "backend/workers#edit"
