Adds ManureManagementPlan to app

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -402,6 +402,15 @@
 # - "backend/legal_entities#unroll"
 # - "backend/legal_entities#update"
 # - "backend/listings#unroll"
+# - "backend/manure_management_plans#create"
+# - "backend/manure_management_plans#destroy"
+# - "backend/manure_management_plans#edit"
+# - "backend/manure_management_plans#index"
+# - "backend/manure_management_plans#list"
+# - "backend/manure_management_plans#new"
+# - "backend/manure_management_plans#show"
+# - "backend/manure_management_plans#unroll"
+# - "backend/manure_management_plans#update"
 # - "backend/matters#create"
 # - "backend/matters#destroy"
 # - "backend/matters#edit"
