--- a/db/models.yml
+++ b/db/models.yml
@@ -66,6 +66,8 @@
 - listing
 - listing_node
 - listing_node_item
+- manure_management_plan
+- manure_management_plan_zone
 - matter
 - medicine
 - mineral_matter
